# esp32-smart-home

./: CLAUDE.md  README.md
gpio/: led.c  led.h  relay.c  relay.h
http/: http_server.c  http_server.h
logic/: light_ctrl.c  light_ctrl.h
main/: CMakeLists.txt  main.c
main/web/: index.html
sensor/: dht11.c  dht11.h  ir_sensor.c  ir_sensor.h  light_sensor.c  light_sensor.h  obstacle.c  obstacle.h
wifi/: wifi_sta.c
